--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<style type="text/css">
+	div {
+		text-align: center;
+	}
+</style>
 <head>
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
-<h1>WELCOME TO THE HOME OF THE ALL KNOWING KRISHBOT</h1>
-<h3>Please ask your questions below</h3>
+    <div>
+        <h1>WELCOME TO THE HOME OF THE ALL KNOWING KRISHBOT</h1>
+        <h3>Please ask your questions below</h3>
+        <br />
+        <iframe src='https://webchat.botframework.com/embed/krishsbot-bot?s=GaGhIeEnR_Y.WknF5OfwpgMXazZQkLyAixOcx6nxh_epft885Rjc6Hg' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    
+    </div>
 </body>
 </html>
